[package]
name = "libwave"
version = "0.1.3-alpha.0"
authors = ["imiskolee@gmail.com"]
description = "a zero copy WAVE audio format parse based on nom."
homepage = "https://github.com/Noise-Labs/wave"
repository = "https://github.com/Noise-Labs/wave"
readme = "README.md"
keywords = ["audio","wave","nom","parser"]
categories = ["encoding","multimedia::audio"]
license = "MIT"

[dependencies]
nom="4.0.0-beta2"